tests/ui/macros/issue-109237.stderr
error: expected expression, found `;`
  --> $DIR/issue-109237.rs:2:12
   |
LL | / macro_rules! statement {
LL | |     () => {;};
   | |            ^ expected expression
LL | | }
   | |_- in this expansion of `statement!`
...
LL |       let _ = statement!();
   |               ------------ in this macro invocation
   |
   = note: the macro call doesn't expand to an expression, but it can expand to a statement
help: surround the macro invocation with `{}` to interpret the expansion as a statement
   |
LL |     let _ = { statement!(); };
   |             ~~~~~~~~~~~~~~~~~

error: aborting due to previous error

